syntax = "proto3";

package loggrebutterfly;

service Master {
  rpc Routes(RoutesInfo) returns (RoutesResponse) {}
  rpc Analysts(AnalystsInfo) returns (AnalystsResponse) {}
}

message RoutesInfo {
}

message RoutesResponse {
  repeated RouteInfo routes = 1;
}

message RouteInfo {
  string name = 1;
  string leader = 2;
}

message AnalystsInfo {
}

message AnalystsResponse {
  repeated AnalystInfo analysts = 1;
}

message AnalystInfo {
  string addr = 1;
}
